Fix inputs background on IE

--- a/app/assets/stylesheets/partials/_mixins.scss
+++ b/app/assets/stylesheets/partials/_mixins.scss
@@ -71,7 +71,7 @@ $pink: #D95485;
               }
 
               input {
-                background: url("/assets/common/background-inputs.png") repeat-x;
+                background: #FFF url("/assets/common/background-inputs.png") bottom repeat-x;
                 border: 1px solid #BBB;
                 padding: 6px 8px;
                 width: 92%;
